refactor: transaction handler
